# vilya

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: todo.md
tests/: test_p2p.py  test_pipeline.py  test_rtsp_message.py  test_uibc.py
tools/: sanitize_pcap.py
vilya/: __main__.py  modes.py
vilya/input/: uibc.py  uinput.py
vilya/media/: audio.py  kwin_screencast.py  pipeline.py  portal.py
vilya/p2p/: dhcp.py  nm.py  supplicant.py  wfd_ie.py
vilya/rtsp/: message.py  session.py
vilya/ui/: app.py
