[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vilya"
version = "0.1.0"
description = "Miracast Wi-Fi Display source for Linux"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["vilya*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
